Fix main content alignment

--- a/sass/utilities.scss
+++ b/sass/utilities.scss
@@ -49,3 +49,8 @@
     width: 100%;
 
 }
+
+.center-block{
+    display: block;
+    margin: 0 auto;
+}
